--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 </div>
     <div class="nav-right">
-      <input type="text" id="searchInput" placeholder="Cari materi kuliah..." oninput="filterBooks()" />
+      <input type="text" id="searchInput" placeholder="Cari materi..." oninput="filterBooks()" />
       <button class="upload-btn" onclick="toggleForm()">⎙</button>
     </div>
   </div>
@@ -41,4 +41,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
